--- a/gs_linear_equation_solver.lpi
+++ b/gs_linear_equation_solver.lpi
@@ -5,12 +5,10 @@
     <General>
       <Flags>
         <MainUnitHasCreateFormStatements Value="False"/>
-        <MainUnitHasTitleStatement Value="False"/>
         <MainUnitHasScaledStatement Value="False"/>
-        <UseDefaultCompilerOptions Value="True"/>
       </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <Title Value="gs_solver"/>
+      <Title Value="Gauss-Seidel Linear Equation Solver"/>
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
@@ -26,16 +24,15 @@
     </RunParams>
     <Units>
       <Unit>
-        <Filename Value="gs_solver.lpr"/>
+        <Filename Value="gs_linear_equation_solver.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="gauss_seidel_solver"/>
       </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="11"/>
     <Target>
-      <Filename Value="gs_solver"/>
+      <Filename Value="gs_linear_equation_solver"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
@@ -65,6 +62,7 @@
       <Debugging>
         <TrashVariables Value="True"/>
         <GenGProfCode Value="True"/>
+        <UseExternalDbgSyms Value="True"/>
       </Debugging>
     </Linking>
   </CompilerOptions>
